have resolved the issue with the light appearing behind the wire on the right handside

--- a/projects/christmas-lights/style.css
+++ b/projects/christmas-lights/style.css
@@ -70,7 +70,6 @@ body {
   padding: 20px;
   width: 100%;
   margin: 0 auto;
-  background: var(--black);
 }
 
 .light {
@@ -109,6 +108,7 @@ body {
   height: 28px;
   border-bottom: 3px solid #222;
   border-radius: 50%;
+  z-index: -1;
 }
 
 .light:last-of-type::after {
